# Parikx

./: .gitignore  pyproject.toml  Отчет Парикмахерская.docx
bookings/: admin.py  forms.py  models.py  urls.py  views.py
bookings/fixtures/: initial_statuses.json
bookings/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_user_user_type.py
services/: admin.py  models.py  urls.py  views.py
services/fixtures/: initial_services.json
services/migrations/: 0001_initial.py
templates/: base.html  home.html  login.html  register.html  verify.html
templates/bookings/: create.html  list.html  master_dashboard.html  master_update.html
templates/services/: detail.html  list.html
