[project]
name = "prparixmaxer"
version = "0.1.0"
description = ""
authors = [
    {name = "D-3342",email = "osiroma435@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
